refactor: use shorter .toList()